--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <section async id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Daine Dvorak</h1>
-      <p>I'm a Seasoned <span class="typed"
+      <p>I'm a Seasoned <span class="typed" async
           data-typed-items="SEO Expert, Innovator, Strategic Thinker, Process Automation Developer, Web Developer, Template Creator, Freelancer"></span>
       </p>
     </div>
@@ -1771,6 +1771,92 @@
     <hr>
 
     <!-- ======= Testimonials Section ======= -->
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org/", 
+          "@type": "Review",
+          "name": "Erin Minné",
+          "reviewBody": "Daine was on the same digital team as me at Woodruff, specializing in SEO. He was also an expert in all things AI automation and transformation. Daine was often a great resource when I had questions regarding ChatGPT extensions, ChatGPT best practices, or Excel formulas. He was always willing to support his greater team and solve complex problems.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5",
+            "worstRating": "0"
+          },
+          "datePublished": "2024-02-14",
+          "author": {"@type": "Person", "name": "Erin Minné"},
+          "publisher": {"@type": "Organization", "name": "LinkedIn.com"}
+        }
+        </script>
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/", 
+          "@type": "Review",
+          "name": "Kevin Stuart Cavanaugh",
+          "reviewBody": "Daine is a brilliant computer specialist. I think he can solve complicated problems that most people cannot. I met Daine when I moved into a law office building his parents owned. My computer had been taken over by Hackers and the Hackers sent me a message that said I would not be able to use my computer unless I paid a ransom. Daine was able to delete the hacker’s software so that my computer was restored and I was able to use it again. I don’t know if this can be done in every situation but he was able to delete my virus.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5",
+            "worstRating": "0"
+          },
+          "datePublished": "2024-02-01",
+          "author": {"@type": "Person", "name": "Kevin Stuart Cavanaugh"},
+          "publisher": {"@type": "Organization", "name": "LinkedIn.com"}
+        }
+        </script>
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",     
+          "@type": "Review",
+          "name": "Andee LaMonica",
+          "reviewBody": "As a writer, I cannot speak highly enough of the partnership Daine and I created while working together. Not only is he collaborative with team members and across departments, but he is dedicated to overall success for his brands and his passion for great work is infectious. It was truly a delight to work with him and one of the reasons I know how important it is for copy and SEO teams to work in parallel--I've seen the results and the potential for even more efficiencies. He made my work more enjoyable because I knew it would only be elevated with Daine's efforts. I wish I could clone him, and would love to work with him again.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5",
+            "worstRating": "0"
+          },
+          "datePublished": "2023-12-28",
+          "author": {"@type": "Person", "name": "Andee LaMonica"},
+          "publisher": {"@type": "Organization", "name": "LinkedIn.com"}
+        }
+        </script>
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/", 
+          "@type": "Review",
+          "name": "Josiphene Black",
+          "reviewBody": "Daine is a unique and great asset to have on any team. His mind is the perfect combination of technical knowledge, strategic thinking, and quick execution which lead to him solving problems for his own clients and for the entire SEO team at Intouch. In addition to managing his set of clients, overseeing their SEO strategy, reporting and execution of tasks, Daine consistently added value to the overarching company by solving team-wide issues which lead to increased productivity and efficiencies for everyone. Examples of these issues include data-entry or manual execution of certain tasks- Daine thrives at finding new ways to automate these manual and tedious items which frees up people to do more meaningful work. Daine was also an excellent team player, always willing to share his knowledge, lead a training, or offer tech support help to others at the company. This also lead to him being very collaborative, working across multiple internal disciplines to realize his goals and strategic ideas. If you get the opportunity to work with Daine, you will see the impacts he has very quickly.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5",
+            "worstRating": "0"
+          },
+          "datePublished": "2023-09-12",
+          "author": {"@type": "Person", "name": "Josiphene Black"},
+          "publisher": {"@type": "Organization", "name": "LinkedIn.com"}
+        }
+        </script>
+      <script type="application/ld+json">
+      {
+          "@context": "https://schema.org/", 
+          "@type": "Review",
+          "name": "Jesse Brown",
+          "reviewBody": "Daine is a unique talent with comprehensive industry knowledge he’s able to tactilely apply for and articulate to clients. While working with Daine he developed several internal tools and processes streamlining our department's workflow. His passion for SEO and UX/UI comes out in his ability to communicate their strategic applications for websites and digital products. Over the years I’ve learned more than I can honestly remember from Daine and am thankful he has been so giving of his time and expertise. As a leader, Daine was a teacher to those throughout our organization. He freely shared his strategic ideas and insights, giving him the ability to delegate complex efforts to internal team members and partnering SMEs. He was also able to consistently deliver top-quality results with ever-changing client expectations, needs, and deadlines. If you have the privilege of working with Daine you’ll learn not only the comprehensive knowledge he possesses throughout the industry but quickly learn it for yourself. Having Daine on your team brings an incredibly talented individual on board, who will continually strive to make himself and those around him better.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5",
+            "worstRating": "0"
+          },
+          "datePublished": "2021-11-18",
+          "author": {"@type": "Person", "name": "Jesse Brown"},
+          "publisher": {"@type": "Organization", "name": "LinkedIn.com"}
+        }
+        </script>
+
     <section id="testimonials" class="testimonials section-bg">
       <div class="container-fluid">
 
@@ -2015,6 +2101,16 @@
       });
     }
   </script>
+  <script type="application/ld+json">
+    {          
+     "@context": "https://schema.org",         
+     "@type": "Organization",                  
+     "url": "https://dainedvorak.com",         
+     "logo": "https://dainedvorak.com/images/profile-img.jpg"   
+     }
+</script>
+                
+
 </body>
 
 </html>
