--- a/portfolio/custom-chatgpt-model_schema-generator/index.html
+++ b/portfolio/custom-chatgpt-model_schema-generator/index.html
@@ -283,32 +283,41 @@
                      </div>
                   </div>
                   <div class="portfolio-description">
-                     <h2 class="display-2" id="h2_showcase_header">Scalable, Automated, Custom Template for SEO
-                        Technical Audit</h2>
+                     <h2 class="display-2" id="h2_showcase_header">Scalable, Automated, Schema Wizard - Schema Markup Generator</h2>
                      <h3 style="font-weight: 900;">Introduction:</h3>
-                     <p>The SEO Technical Audit Template Workbook - distills complex SEO tasks into actionable steps,
-                        focusing on key areas like crawl errors, site speed, and security. Tailored for both seasoned
-                        professionals and beginners, it provides checklists and best practices to enhance website
-                        performance and search rankings. This concise guide emphasizes a strategic approach to organic
-                        growth and digital competitiveness, making it an invaluable tool for anyone looking to complete
-                        comphrensive technical audits or a simple discovery audit on technical landscape of perspective
-                        clients and competitors. </p>
-                     <h3 style="font-weight: 900;">Challenge:</h3>
-                     <p>In the ever-evolving landscape of SEO, staying ahead means adopting innovative techniques. The
-                        challenge was enhancing SERP visibility in a saturated market.</p>
-                     <h3 style="font-weight: 900;">Strategy:</h3>
-                     <p>I developed a custom AI model for schema markup. This revolutionary approach allowed for
-                        dynamic, AI-assisted optimization of web content, ensuring richer, more relevant search results.
+                     <p>
+                        In the digital age, SEO is the backbone of web visibility. Recognizing the need for innovation in this area, I developed "Schema Wizard," a custom ChatGPT model designed to elevate SEO strategies through advanced schema markup automation. In the ever-evolving landscape of SEO, staying ahead means adopting innovative techniques. 
+
+
                      </p>
+                     <h3 style="font-weight: 900;">Challenge:</h3>
+                     <p>
+                        The challenge was to optimize web content for enhanced SERP visibility in a saturated market.
+                        Schema Wizard is a breakthrough tool that simplifies the creation of precise schema markups for webpages. By just pasting webpage content into Schema Wizard, users receive detailed, applicable schema.org types, streamlining the SEO process. This AI-powered approach not only enhances content indexing but also significantly improves organic search performance.</p>
+<p>
+<strong>What sets Schema Wizard apart?</strong> Its ability to debug syntax errors and guide users through corrections, offering a downloadable link for the corrected JSON-LD. This feature is invaluable, saving time and enhancing user understanding of schema development nuances.
+
+
+                     </p>
+                     <h3 style="font-weight: 900;">Strategy:</h3>
+                     <p>I developed a custom ChatGPT Model built from a massive data extraction and manipulation project. I used it to train the chatbot model for schema markup idenfitication by using; Natural Language Processing (NLP), Entity Extraction, and Data Transformation. This revolutionary approach allowed for
+                        dynamic, AI-assisted optimization of web content, ensuring richer, more relevant search results. All that is required from the user is to copy and paste all the content of the webpage they want to add schema too, and click the 'Send' button. This will then produce an outline of all applicable schema types, properties, and details. Then you can then tell <em>Schema Wizard</em> to generate the schema markup using the identified relevant infromation.
+                     </p>
+                     
                      <h3 style="font-weight: 900;">Results:</h3>
+                     <p>By automating and refining schema markup creation, Schema Wizard accelerates SEO efforts, ensuring content is accurately indexed and displayed in search results. This project is a testament to the power of AI in transforming SEO practices, offering a smarter, faster route to top-tier web content optimization.</p>
                      <ul>
                         <li id="results_1">📈 39% increase in SERP rich results.</li>
-                        <li id="results_2">Substantial rise in unbranded keyword rankings.</li>
-                        <li id="results_3">Marked improvement in overall organic traffic and user engagement.</li>
+                        <li id="results_2">Substantial rise in unbranded keyword rankings - successfully intersecting potentially new customers search journy.</li>
+                        <li id="results_3">Marked improvement in overall organic traffic and user engagement. Most notably in impressions for brand awareness</li>
+                        <li id="results_4">🤖 Fully optimized, detailed Schema for anywebpage, any length, in under 2 minutes.</li>
                      </ul>
                      <h3 style="font-weight: 900;">Impact:</h3>
                      <p>This case study exemplifies the power of AI in redefining SEO strategies. It's not just about
-                        adapting to changes; it's about being the change.</p>
+                        adapting to changes; it's about being the change. My <em>Schema Wizard</em> represents the intersection of technology and SEO expertise, offering a smarter, faster way to optimize web content. As we continue to navigate the digital age, tools like Schema Wizard not only simplify SEO tasks but also empower creators, developers, and marketers to achieve superior organic search results. Join me in embracing the future of SEO, where innovation meets efficiency, with Schema Wizard leading the charge.
+
+
+                     </p>
                      <!--                         <h4 style="font-weight: 900;">Summary:</h4>
                         <p id="port_summary"> Did this case study spark ideas for your SEO strategy? Hit 'Like' if you find AI integration in SEO as fascinating as I do and share your thoughts in the comments! 🤖💡</p> -->
                   </div>
