--- a/edu-center/index.html
+++ b/edu-center/index.html
@@ -65,16 +65,23 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
+                        <div class="card bg-light shadow rounded-3 border-2 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-cloud-download"></i></div>
-                                <h2 class="fs-4 fw-bold">Free to download</h2>
-                                <p class="mb-0">As always, Start Bootstrap has a powerful collectin of free templates.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">z_Icon</div>
+                                <h2 class="fs-4 fw-bold">FreedomGPT</h2>
+                                <p class="mb-0">FreedomGPT 2.0 is your launchpad for AI. With our “App Store” for AI no technical knowledge is required to use the latest AI models in both a private and secure manner. For example, the Liberty model included in FreedomGPT will answer any question without censorship, judgment, or post output bias.
+
+This platform has been increasing in rate of development and new features added as well as implimentation of more and more pay-to-use so i hope it doesnt become fully paid before all get to test. 
+
+But thats what we got open-source LLM datasets + Panokio</p>
                             </div>
+<div class="card-footer d-flex align-items-center justify-content-center">
+                                <a class="btn btn-primary btn-lg" href="https://www.freedomgpt.com/">Test and Install FreedomGPT Locally</a>
+                                </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
+                        <div class="card bg-light shadow rounded-3 border-2 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><svg class="jettlife_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#FFF" d="M320 0c4.4 0 8 3.6 8 8V96H448c53 0 96 43 96 96V416c0 53-43 96-96 96H192c-53 0-96-43-96-96V192c0-53 43-96 96-96H312V8c0-4.4 3.6-8 8-8zM192 112c-44.2 0-80 35.8-80 80V416c0 44.2 35.8 80 80 80H448c44.2 0 80-35.8 80-80V192c0-44.2-35.8-80-80-80H320 192zm8 288h48c4.4 0 8 3.6 8 8s-3.6 8-8 8H200c-4.4 0-8-3.6-8-8s3.6-8 8-8zm96 0h48c4.4 0 8 3.6 8 8s-3.6 8-8 8H296c-4.4 0-8-3.6-8-8s3.6-8 8-8zm96 0h48c4.4 0 8 3.6 8 8s-3.6 8-8 8H392c-4.4 0-8-3.6-8-8s3.6-8 8-8zM224 216a40 40 0 1 0 0 80 40 40 0 1 0 0-80zm56 40a56 56 0 1 1 -112 0 56 56 0 1 1 112 0zm96 0a40 40 0 1 0 80 0 40 40 0 1 0 -80 0zm40 56a56 56 0 1 1 0-112 56 56 0 1 1 0 112zM48 224H64v16H48c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32H64v16H48c-26.5 0-48-21.5-48-48V272c0-26.5 21.5-48 48-48zM592 400c17.7 0 32-14.3 32-32V272c0-17.7-14.3-32-32-32H576V224h16c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H576V400h16z"/></svg></div>
                                 <h2 class="fs-4 fw-bold">Chat Based Bot</h2>
