--- a/.dev-2025/dev/blog.html
+++ b/.dev-2025/dev/blog.html
@@ -13,7 +13,7 @@ Author: Daine Dvorak
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Portfolio">
 		<meta name="keywords" content="Creative, minimal, Portfolio, cv, business, Resume, Information, personal portfolio, Professional">
-		<meta name="author" content="kamleshyadav">
+		<meta name="author" content="Daine Dvorak">
 		<meta name="MobileOptimized" content="320">
 		<!--Start Style -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -570,8 +570,8 @@ Author: Daine Dvorak
 
 											</div>
 											<h2 class="footer_heading">Location</h2>
-											<p>73 Southside Lane Los Angeles</p>
-											<p>Joaquin d'Oeste - DF</p>
+											<p>6633 Park St. Shawnee, KS 66216</p>
+											<p>Shawnee, KS 66216</p>
 										</div>
 									</div>
 									<div class="col-sm-4 text-center">
@@ -621,8 +621,8 @@ Author: Daine Dvorak
 												</svg>
 											</div>
 											<h2 class="footer_heading">Contact Us</h2>
-											<p><a href="javascript:;">+(81)52 13698-5745</a></p>
-											<p><a href="javascript:;">+(74)12 13698-7412</a></p>
+											<p><a href="tel:9137105841">+(81)52 13698-5745</a></p>
+											
 										</div>
 									</div>
 									<div class="col-sm-4 text-center">
