--- a/author-info.html
+++ b/author-info.html
@@ -29,12 +29,12 @@ Author: Daine Dvorak
 		<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 		<!-- Add this to your <head> section if not already included -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-		<link rel="icon" type="image/png" href="/.dev-2025/dev/assets/favicon/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/svg+xml" href="/.dev-2025/dev/assets/favicon/favicon.svg" />
-		<link rel="shortcut icon" href="/.dev-2025/dev/assets/favicon/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/.dev-2025/dev/assets/favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Daine Dvorak Portfolio" />
-		<link rel="manifest" href="/.dev-2025/dev/assets/favicon/site.webmanifest" />
+		<link rel="manifest" href="/assets/favicon/site.webmanifest" />
 		<title>AI-Driven SEO Manager | Daine Dvorak - Portfolio Website</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -45,7 +45,7 @@ Author: Daine Dvorak
 			<div class="port_sidebar_profile">
 				<a href="javascript:;" class="port_sidebar_position active">
 					<div class="profile_circle ">
-						<img src="https://dainedvorak.com/.dev-2025/dev/assets/images/prod-ready/navbar-profile-img-compressed_daine-dvorak-seo-portfolio-website-v2.jpg" alt="Professional headshot of Daine Dvorak, featured on his portfolio website, wearing a blue shirt and patterned tie against a modern wooden backdrop." class="img-fluid"/>
+						<img src="/assets/images/prod-ready/navbar-profile-img-compressed_daine-dvorak-seo-portfolio-website-v2.jpg" alt="Professional headshot of Daine Dvorak, featured on his portfolio website, wearing a blue shirt and patterned tie against a modern wooden backdrop." class="img-fluid"/>
 					</div>
 				</a>
 			</div>
@@ -231,7 +231,7 @@ Author: Daine Dvorak
       <div class="col-lg-10 text-center">
         <h1 class="display-4 fw-bold mb-3">About Daine Dvorak</h1>
         <p class="lead mb-4">Experienced SEO Manager & AI Strategist</p>
-        <img src="https://dainedvorak.com/.dev-2025/dev/assets/images/prod-ready/daine-dvorak-profile-picture-homepage_compressed-author-page-picture.jpg" alt="Daine Dvorak Portrait" class="rounded-circle mb-4" />
+        <img src="/assets/images/prod-ready/daine-dvorak-profile-picture-homepage_compressed-author-page-picture.jpg" alt="Daine Dvorak Portrait" class="rounded-circle mb-4" />
         <p class="mb-4">Daine Dvorak is an AI-powered SEO architect who fuses innovation with precision. From building a GPT-powered schema bot to leading SEO automation initiatives that saved 86+ hours per project, his work has reshaped how technical SEO is scaled and delivered. With over a decade of experience, Daine is also a mentor and educator whose strategic frameworks have empowered teams and driven $200K+ in SEO revenue. He continues to push the boundaries of automation, search discovery, and digital performance.</p>
         <hr class="my-5">
       </div>
