--- a/coming-soon/index-original-not-optimized.html
+++ b/coming-soon/index-original-not-optimized.html
@@ -109,12 +109,12 @@ body {
   }
 }
 </style>
-		<link rel="icon" type="image/png" href="/.dev-2025/dev/assets/favicon/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/svg+xml" href="/.dev-2025/dev/assets/favicon/favicon.svg" />
-		<link rel="shortcut icon" href="/.dev-2025/dev/assets/favicon/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/.dev-2025/dev/assets/favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Daine Dvorak Portfolio" />
-		<link rel="manifest" href="/.dev-2025/dev/assets/favicon/site.webmanifest" />
+		<link rel="manifest" href="/assets/favicon/site.webmanifest" />
         	<!-- Favicon Link -->
 		<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
