--- a/testimonial-slider/merged.html
+++ b/testimonial-slider/merged.html
@@ -87,14 +87,6 @@ h1 {
 	margin-bottom: calc(0.7rem + 0.5vmin);
 }
 
-.chicken {
-	background-image: url("https://media0.giphy.com/media/A8Cdznswn5vnG/200w.gif?cid=790b7611e8c5980ee7141bc18ec12c49962b871eb404ba5b&rid=200w.gif&ct=s");
-	width: 200px;
-	height: 250px;
-	position: absolute;
-	top: 12%;
-}
-
 #imgDiv::after {
 	content: "''";
 	font-size: calc(2rem + 2vmin);
@@ -135,6 +127,22 @@ h1 {
 	line-height: 2rem;
 }
 
+.view-full {
+	display: inline-block;
+	padding: 8px 16px;
+	background-color: rgb(79, 143, 226);
+	color: white;
+	text-decoration: none;
+	border-radius: 4px;
+	margin-bottom: 20px;
+	font-size: calc(0.8rem + 0.3vmin);
+	transition: background-color 0.3s;
+}
+
+.view-full:hover {
+	background-color: rgb(59, 123, 206);
+}
+
 .arrow-wrap {
 	position: absolute;
 	top: 50%;
@@ -166,23 +174,6 @@ h1 {
 	right: 5%;
 }
 
-
-.move-head {
-	animation: moveHead 1.55s infinite;
-	animation-delay: -0.8s;
-}
-
-@keyframes moveHead {
-	0% {
-	}
-	25% {
-		transform: translate(0.5rem, 1rem) rotate(5deg);
-	}
-	100% {
-		transform: translate(0, 0) rotate(-5deg);
-	}
-}
-
 @media screen and (max-width: 900px) {
 	.content-wrapper {
 		width: 100%;
@@ -212,8 +203,8 @@ h1 {
 				</div>
 				<div id="personName"></div>
 				<div id="profession"></div>
-				<div id="description">
-				</div>
+				<div id="description"></div>
+				<div id="certURL"></div>
 			</div>
 			<div class="left-arrow-wrap arrow-wrap">
 				<div class="arrow" id="leftArrow"></div>
@@ -237,7 +228,7 @@ const profession = document.getElementById("profession");
 const description = document.getElementById("description");
 const surpriseMeBtn = document.getElementById("surpriseMeBtn");
 const chicken = document.querySelector(".chicken");
-
+const certURL = document.getElementById("certURL");
 let isChickenVisible;
 
 let people = [
@@ -246,6 +237,7 @@ let people = [
 			'url("https://dainedvorak.com/assets/images/testimonials/josiphene-black-_-linkedin-photo.jpg")',
 		name: "Josiphene Black",
 		profession: "Group Director, SEO",
+		fullRecoLink: 'url("https://dainedvorak.com/assets/images/testimonials/josiphene-black_linkedin-recommendation.jpg")',
 		description:
 			"Daine is a unique and great asset to have on any team. His mind is the perfect combination of technical knowledge, strategic thinking, and quick execution which lead to him solving problems for his own clients and for the entire SEO team at Intouch. ....If you get the opportunity to work with Daine, you will see the impacts he has very quickly."
 	},
@@ -255,6 +247,7 @@ let people = [
 			'url("https://dainedvorak.com/assets/images/testimonials/andee-lamonica-_-linkedin-photo.jpg")',
 		name: "Andee LaMonica",
 		profession: "Associate Creative Director/Copywriter",
+		fullRecoLink: 'url("https://dainedvorak.com/assets/images/testimonials/andee-lamonica_linkedin-recommendation.jpg")',
 		description:
 			"As a writer, I cannot speak highly enough of the partnership Daine and I created while working together. Not only is he collaborative with team members and across departments, but he is dedicated to overall success for his brands and his passion for great work is infectious. It was truly a delight to work with him and one of the reasons I know how important it is for copy and SEO teams to work in parallel--I've seen the results and the potential for even more efficiencies. He made my work more enjoyable because I knew it would only be elevated with Daine's efforts. I wish I could clone him, and would love to work with him again."
 	},
@@ -264,6 +257,7 @@ let people = [
 			'url("https://dainedvorak.com/assets/images/testimonials/kevin-stuart-cavanaugh-_-linkedin-photo.jpg")',
 		name: "Kevin Stuart Cavanaugh",
 		profession: "Owner at Law Firm of Kevin Stuart Cavanaugh",
+		fullRecoLink: 'url("https://dainedvorak.com/assets/images/testimonials/kevin-cavanaugh_linkedin-recommendation.jpg")',
 		description:
 			"Daine is a brilliant computer specialist. I think he can solve complicated problems that most people cannot....Daine was able to delete the hacker’s software so that my computer was restored and I was able to use it again."
 	},
@@ -272,6 +266,7 @@ let people = [
 			'url("https://dainedvorak.com/assets/images/testimonials/erin-r-minne-linkedin-photo.jpg")',
 		name: "Erin Minné",
 		profession: "Lead Manager - Analytics & Insights | Woodruff",
+		fullRecoLink: 'url("https://dainedvorak.com/assets/images/testimonials/erin-minné-full-recommendation.jpg")',
 		description:
 			"Daine was on the same digital team as me at Woodruff, specializing in SEO. He was also an expert in all things AI automation and transformation. Daine was often a great resource when I had questions regarding ChatGPT extensions, ChatGPT best practices, or Excel formulas. He was always willing to support his greater team and solve complex problems."
 	},
@@ -280,17 +275,10 @@ let people = [
 			'url("https://dainedvorak.com/assets/images/testimonials/jesse-brown-_-linkedin-photo.jpg")',
 		name: "Jesse Brown",
 		profession: "SEO Director",
+//		fullRecoLink: 'url("https://dainedvorak.com/assets/images/testimonials/jesse-brown_linkedin-recommendation.jpg")',
+		fullRecoLink: 'url("/assets/images/testimonials/jesse-brown_linkedin-recommendation.jpg")',
 		description:
 			"As a leader, Daine was a teacher to those throughout our organization. He freely shared his strategic ideas and insights, giving him the ability to delegate complex efforts to internal team members and partnering SMEs. He was also able to consistently deliver top-quality results with ever-changing client expectations, needs, and deadlines."
-	},
-
-	{
-		photo:
-			'url("https://dainedvorak.com/assets/images/testimonials/andee-lamonica-_-linkedin-photo.jpg")',
-		name: "Andee LaMonica",
-		profession: "Associate Creative Director/Copywriter",
-		description:
-			"As a writer, I cannot speak highly enough of the partnership Daine and I created while working together. Not only is he collaborative with team members and across departments, but he is dedicated to overall success for his brands and his passion for great work is infectious. It was truly a delight to work with him and one of the reasons I know how important it is for copy and SEO teams to work in parallel--I've seen the results and the potential for even more efficiencies. He made my work more enjoyable because I knew it would only be elevated with Daine's efforts. I wish I could clone him, and would love to work with him again."
 	}
 ];
 
