add GS4 Tracking

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ Author: Daine Dvorak
     gtag('js', new Date());
     gtag('config', 'G-R5YXDWMZEV');
   </script>
+
+	  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-R5YXDWMZEV');
+  </script>
 	<meta name="name" content="Hire Daine Dvorak: SEO Manager with AI expertise, a record of ranking success, and a data-driven approach to search and content optimization.">
 	<meta name="keywords"
 		content="Creative, minimal, Portfolio, cv, business, Resume, Information, personal portfolio, Professional">
