--- a/author-info.html
+++ b/author-info.html
@@ -11,6 +11,15 @@ Author: Daine Dvorak
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-R5YXDWMZEV');
+  </script>
 		<meta name="description" content="Hire Daine Dvorak: SEO Manager with AI expertise, a record of ranking success, and a data-driven approach to search and content optimization.">
 		<meta name="keywords" content="Creative, minimal, Portfolio, cv, business, Resume, Information, personal portfolio, Professional">
 		<meta name="author" content="Daine Dvorak">
